@@ -3,6 +3,8 @@ Example.pm
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -25,8 +27,8 @@ t/modules/Ex5.pm
 t/modules/Ex6.pm
 t/modules/Ex7.pm
 t/modules/Ex8.pm
-t/Pod-Example/00-use.t
-t/Pod-Example/01-version.t
-t/Pod-Example/02-pod_coverage.t
-t/Pod-Example/03-pod.t
-t/Pod-Example/04-get.t
+t/Pod-Example/01-use.t
+t/Pod-Example/02-version.t
+t/Pod-Example/03-get.t
+xt/Pod-Example/01-pod_coverage.t
+xt/Pod-Example/02-pod.t
