@@ -76,7 +76,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2014 Michal Špaček
+     © 2011-2015 Michal Špaček
      BSD 2-Clause License
 
 VERSION
