@@ -1,5 +1,6 @@
 0.08
  - Add SEE ALSO section to doc.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
  - Update copyright years.
 
